--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,13 @@ services:
   frontend-react-js:
     environment:
       REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+      REACT_APP_AWS_PROJECT_REGION: "{AWS_DEFAULT_REGION}"
+      # REACT_APP_AWS_COGNITO_IDENTITY_POOL_ID: "{AWS_DEFAULT_REGION}"
+      REACT_APP_AWS_COGNITO_REGION: "{AWS_DEFAULT_REGION}"
+      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_ahhyTujn2"
+      REACT_APP_CLIENT_ID: "26ss51lu2ok9mg9813l3h6p9eo"
+
+
     build: ./frontend-react-js
     ports:
       - "3000:3000"
