--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       REACT_AWS_PROJECT_REGION: "{AWS_DEFAULT_REGION}"
       # REACT_APP_AWS_COGNITO_IDENTITY_POOL_ID: "{AWS_DEFAULT_REGION}"
       REACT_APP_AWS_COGNITO_REGION: "{AWS_DEFAULT_REGION}"
-      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_2HByss0j6"
-      REACT_APP_CLIENT_ID: "5t5d1u62r1l8tq6996j44611ht"
+      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_Px0dHcMKU"
+      REACT_APP_CLIENT_ID: "pnangel1ac5ofijm8nt8shle9"
 
 
     build: ./frontend-react-js
